# MPI_Proj

./: .gitignore  CMakeLists.txt  README.md  sample_dox.conf  ses.sh
data/: eval.py  file.txt  file0.txt  file1.txt  real_val.txt
include/: core_func.h  distributeByMedian.h  utils.h
scripts/: create_data.py  datasets.py  eval.py  exp.txt  hist_thr.txt  hist_vs.txt  mnist.txt  norm.txt  normv2_24.txt  plots.py  requirements.txt  test.py  usi.txt  variance.py
src/: core_func.c  distributeByMedian.c  sprogram.c  utils.c
tests/: CMakeLists.txt
tests/src/: utils_test.cpp
